[package]
name = "strictstrings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
lingua = "1.5.0"
prettytable = "0.10.0"
indicatif = "0.17.6"
strsim = "0.10.0"
percent-encoding = "2.1.0"
clap = "3.1.18"
